[gd_scene load_steps=2 format=3 uid="uid://dxbx8y5qw3n8k"]

[ext_resource type="Script" path="res://scripts/ui/battle_log_ui.gd" id="1_battle_log"]

[node name="BattleLogUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle_log")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Battle History"
theme_override_font_sizes/font_size = 32

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Close"

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Total Battles: 0 | Victories: 0 | Defeats: 0 | Win Rate: 0.0%"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="MainContent" type="HSplitContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 400

[node name="BattleListPanel" type="PanelContainer" parent="MarginContainer/VBox/MainContent"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/MainContent/BattleListPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MainContent/BattleListPanel/VBox"]
layout_mode = 2
text = "Battles (Most Recent First)"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/MainContent/BattleListPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleList" type="VBoxContainer" parent="MarginContainer/VBox/MainContent/BattleListPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="DetailPanel" type="PanelContainer" parent="MarginContainer/VBox/MainContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/MainContent/DetailPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MainContent/DetailPanel/VBox"]
layout_mode = 2
text = "Battle Details"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/MainContent/DetailPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailText" type="RichTextLabel" parent="MarginContainer/VBox/MainContent/DetailPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][i]Select a battle to view details[/i][/center]"
fit_content = true
